[package]
name = "mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
log = "0.4.17"
once_cell = "1.17.1"
pollster = "0.3.0"
uuid = "1.3.0"
wgpu = "0.15.1"
winit = "0.28.3"

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
